--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -19,7 +19,7 @@ datasize = { version = "0.2.4", optional = true }
 ed25519-dalek = { version = "1.0.0", default-features = false, features = ["rand", "u64_backend"] }
 hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
 hex_fmt = "0.3.0"
-k256 = { version = "0.7.2", default-features = false, features = ["ecdsa", "zeroize"] }
+k256 = { version = "0.11.0", default-features = false, features = ["ecdsa"] }
 num = { version = "0.4.0", default-features = false, features = ["alloc"] }
 num-derive = { version = "0.3.0", default-features = false }
 num-integer = { version = "0.1.42", default-features = false }
